// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroup row=false should yield single column 1`] = `
.c0 {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: 1fr;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ChoiceGroup>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "ChoiceGroup-sc-1pvteyi-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:grid;grid-gap:10px;grid-template-columns:",
            [Function],
            ";flex-wrap:wrap;",
          ],
        },
        "displayName": "ChoiceGroup",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "ChoiceGroup-sc-1pvteyi-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</ChoiceGroup>
`;

exports[`ChoiceGroup row=true should yield multiple columns 1`] = `
.c0 {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(auto-fit,minmax(120px,1fr));
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<ChoiceGroup
  row={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "ChoiceGroup-sc-1pvteyi-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:grid;grid-gap:10px;grid-template-columns:",
            [Function],
            ";flex-wrap:wrap;",
          ],
        },
        "displayName": "ChoiceGroup",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "ChoiceGroup-sc-1pvteyi-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    row={true}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</ChoiceGroup>
`;
